edition = "2023";

package wayplatform.connect.tachograph.card.v1;

import "google/protobuf/timestamp.proto";
import "wayplatform/connect/tachograph/datadictionary/v1/event_fault_type.proto";
import "wayplatform/connect/tachograph/datadictionary/v1/vehicle_registration_identification.proto";

// Represents the content of the EF_Faults_Data file, which contains a log of
// faults related to the tachograph system.
//
// The file structure is specified in Appendix 2, Section 4.2.1.
//
//     EF Faults_Data
//     └─CardFaultData
//
// The data type `CardFaultData` is specified in the Data Dictionary, Section 2.21.
//
// ASN.1 Specification:
//
//     CardFaultData ::= SEQUENCE (SIZE(2)) OF
//         cardFaultRecords SET SIZE(NoOfFaultsPerType) OF CardFaultRecord
//
message FaultsData {
  // Represents a single fault record.
  //
  // The data type `CardFaultRecord` is specified in the Data Dictionary, Section 2.22.
  //
  // ASN.1 Specification:
  //
  //     CardFaultRecord ::= SEQUENCE {
  //         faultType EventFaultType,
  //         faultBeginTime TimeReal,
  //         faultEndTime TimeReal,
  //         faultVehicleRegistration VehicleRegistrationIdentification
  //     }
  message Record {
    // If true, the fields below are populated with parsed, semantic data.
    // If false, the 'raw_data' field contains the original, unprocessed record
    // bytes.
    bool valid = 1;

    // --- Fields for a valid record (when valid = true) ---

    // ASN.1 Type: EventFaultType (see DD 2.70)
    datadictionary.v1.EventFaultType fault_type = 2;
    

    // ASN.1 Type: TimeReal (see DD 2.162)
    //
    //     TimeReal ::= INTEGER (0..2^32-1)
    google.protobuf.Timestamp fault_begin_time = 4;

    // ASN.1 Type: TimeReal (see DD 2.162)
    //
    //     TimeReal ::= INTEGER (0..2^32-1)
    google.protobuf.Timestamp fault_end_time = 5;

    // ASN.1 Type: VehicleRegistrationIdentification (see DD 2.166)
    datadictionary.v1.VehicleRegistrationIdentification fault_vehicle_registration = 6;

    // --- Field for a non-valid record (when valid = false) ---
    // Holds the raw 24 bytes of the original record.
    bytes raw_data = 7;
  }

  repeated Record records = 1;

  // Digital signature for the EF_Faults_Data file content.
  bytes signature = 2;
}
